--- a/Taggify/commons/composer.json
+++ b/Taggify/commons/composer.json
@@ -1,27 +1,13 @@
 {
     "name": "taggify/commons",
     "description": "Common libs",
-    "keywords": ["lib", "commons"],
-    "homepage": "https://github.com/NicolasTaglienti/taggify-commons",
     "type": "library",
-    "license": "proprietary",
     "authors": [
         {
-            "name": "Nicolas Taglienti",
+            "name": "nicolasTaglienti",
             "email": "ntaglienti@taggify.net"
         }
     ],
-    "autoload": {
-        "psr-4": { "Taggify\\Common\\": "src/Taggify/Common" }
-    },
-    "require": {
-        "php": ">=5.4.0",
-        "ext-mcrypt": "*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^5.1"
-    },
-    "config": {
-        "bin-dir": "bin"
-    }
+    "minimum-stability": "dev",
+    "require": {}
 }
